# slurm-monitor

./: .gitignore  BUGS.md  Cargo.toml  DESIGN.md  README.md  deploy.env.example
.config/: nextest.toml
.github/workflows/: deploy_kiz0.yml  production.yml  rust-clippy.yml  rust.yml
api/: Cargo.toml
api/src/: data.rs  main.rs
backend/: Cargo.toml
backend/src/: cli.rs  client.rs  collect.rs  main.rs
backend/src/_old/: collect.rs
collector/: Cargo.toml
collector/src/: config.rs  main.rs
collector_data/: Cargo.toml
collector_data/src/: cpu.rs  gpu.rs  gpu_dep.rs  job.rs  lib.rs  monitoring_info.rs  node.rs  slurm.rs
collector_data/src/misc/: parsing.rs
collector_data/tests/: slurm.rs
data/: Cargo.toml
data/src/: lib.rs
database/: Cargo.toml
frontend/: Cargo.toml
frontend/src/: cli.rs  data.rs  main.rs  parse.rs  render.rs
scripts/: deploy.sh  fetch_data.sh
src/: main.rs
