[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.17", features = ["brotli"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
collector_data = { version = "0.1.0", path = "../collector_data" }
color-eyre = "0.6.3"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3.31"
itertools = "0.13.0"
poem = "3.1.3"
poem-openapi = { version = "5.1.2", features = ["humantime", "chrono", "swagger-ui", "uuid"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
test-log = { version = "0.2.16", default-features = false, features = ["color", "trace"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[lints]
workspace = true
