[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.17", features = ["brotli", "tokio"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive", "wrap_help", "unicode"] }
collector_data = { version = "0.1.0", path = "../collector_data" }
color-eyre = "0.6.3"
flate2 = "1.0.34"
futures = "0.3.30"
itertools = "0.13.0"
sentry = { version = "0.35.0", features = ["tracing"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "net",
    "io-std",
    "fs",
    "macros",
    "io-util",
    "sync",
    "tracing",
] }
tokio-stream = "0.1.16"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-timing = "0.6.0"

[lints]
workspace = true

[dev-dependencies]
brotli = "7.0.0"
tempfile = "3.14.0"
