[package]
name = "collector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
env_logger = "0.11.5"
log = "0.4.22"
nvml-wrapper = "0.10.0"
serde = { version = "1.0.209", features = ["derive"] }
collector_data = { version = "0.1.0", path = "../collector_data" }
sysinfo = "0.29.8"
itertools = "0.13.0"


[lints]
workspace = true
