[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
axum = "0.7.5"
axum-macros = "0.4.1"
base64ct = { version = "1.6.0", features = ["std"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive", "wrap_help", "unicode"] }
derive_more = "0.99.18"
image = { version = "0.25.1", default-features = false, features = ["png"] }
itertools = "0.13.0"
json = "0.12.4"
log = "0.4.21"
maud = { version = "0.26.0", features = ["axum"] }
once_cell = "1.19.0"
ordered-float = "4.2.2"
paste = "1.0.15"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.118"
tempfile = "3.10.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }

# plotters = "0.3.6"
plotters = { git = "https://github.com/plotters-rs/plotters", branch = "next-release-devel" }
collector_data = { version = "0.1.0", path = "../collector_data" }
flate2 = "1.0.34"


[lints]
workspace = true
